--- a/News/assets/css/style.css
+++ b/News/assets/css/style.css
@@ -1,11 +1,14 @@
-
 body {
-  font-family: "Open Sans", sans-serif;
-  color: #444444;
+  font-family: "Raleway", sans-serif;
+  color: black;
 }
 
-
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: "Raleway", sans-serif;
 }
 
@@ -19,7 +22,7 @@ h1, h2, h3, h4, h5, h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background:rgb(23, 23, 83);
+  background: rgb(23, 23, 83);
   width: 40px;
   height: 40px;
   transition: all 0.4s;
@@ -40,15 +43,29 @@ h1, h2, h3, h4, h5, h6 {
   visibility: visible;
   opacity: 1;
 }
+.na {
+  animation: nav-load 300ms ease-in;
+}
+@keyframes nav-load {
+  0% {
+    transform: translateY(-100%);
+  }
 
+  100% {
+    transform: translateY(0);
+  }
+}
 
+@media screen and (max-width: 995px) {
+  .a1 {
+    margin-left: -65px;
+  }
+}
 @media screen and (max-width: 768px) {
   [data-aos-delay] {
     transition-delay: 0 !important;
   }
 }
-
-
 
 /*--------------------------------------------------------------
 # Header
@@ -124,21 +141,17 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
-
-
 /*--------------------------------------------------------------
 # Hero Section
 --------------------------------------------------------------*/
 #hero {
   width: 100%;
   height: calc(100vh - 110px);
-  background: url("../img/NEWS1.jpg") ;
+  background: url("../img/NEWS1.jpg");
   background-position: center;
   background-repeat: none;
   position: relative;
 }
-
-
 
 @media (min-width: 700px) {
   #hero {
@@ -157,7 +170,6 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 30px;
     line-height: 36px;
   }
-  
 }
 
 /*--------------------------------------------------------------
@@ -225,7 +237,6 @@ section {
   font-size: 25px;
 }
 
-
 .about .content ul {
   list-style: none;
   padding: 0;
@@ -247,15 +258,15 @@ section {
 
 .button {
   width: 200px;
-     padding: 15px 0;
-     text-align: center;
-     margin: 20px 10px;
-     border-radius: 25px;
-     font-weight: bold;
-     border: 2px solid #009688;
-     background: transparent;
-     position: relative;
-     overflow: hidden;
+  padding: 15px 0;
+  text-align: center;
+  margin: 20px 10px;
+  border-radius: 25px;
+  font-weight: bold;
+  border: 2px solid #009688;
+  background: transparent;
+  position: relative;
+  overflow: hidden;
 }
 
 .button span {
@@ -267,7 +278,7 @@ section {
 }
 
 .button span:after {
-  content: '\00bb';
+  content: "\00bb";
   position: absolute;
   opacity: 0;
   top: 0;
@@ -284,12 +295,12 @@ section {
   right: 0;
 }
 
-
 /*--------------------------------------------------------------
 # Cta
 --------------------------------------------------------------*/
 .cta {
-  background: linear-gradient(rgba(2, 2, 2, 0.5), rgba(0, 0, 0, 0.5)), url("../img/csm.jpeg") fixed center center;
+  background: linear-gradient(rgba(2, 2, 2, 0.5), rgba(0, 0, 0, 0.5)),
+    url("../img/csm.jpeg") fixed center center;
   background-size: cover;
   padding: 120px 0;
 }
@@ -323,7 +334,31 @@ section {
   border: 2px solid #1a0707;
 }
 
-
+.lin {
+  color: aliceblue;
+}
+.lin:hover {
+  text-decoration: none;
+  color: bisque;
+  text-decoration: underline;
+  font-weight: bolder;
+}
+.col {
+  padding: 25px;
+}
+.lasfoo {
+  background-color: rgb(0, 0, 0);
+  color: aliceblue;
+}
+.bd {
+  background-color: black;
+  width: 100vw;
+  height: 50vh;
+}
+.bd h1 {
+  text-align: center;
+  color: white;
+}
 
 #foot {
   background-color: black;
@@ -335,7 +370,7 @@ section {
 }
 .lin:hover {
   text-decoration: none;
-  color: rgba(152, 155, 12);
+  color: bisque;
 }
 .col {
   background-color: rgb(78, 78, 78);
