--- a/bar.css
+++ b/bar.css
@@ -1,3 +1,7 @@
+* {
+ 
+    font-family: "Raleway", sans-serif;
+  }
 
 .container
 {
@@ -37,6 +41,18 @@
     border-top: 2px solid rgba(0,0,0,.5);
     border-bottom: 2px solid rgba(0,0,0,.5);
 }
+.na {
+    animation: nav-load 300ms ease-in;
+  }
+  @keyframes nav-load {
+    0% {
+      transform: translateY(-100%);
+    }
+  
+    100% {
+      transform: translateY(0);
+    }
+  }
 .button {
     width: 200px;
     padding: 15px 0;
